# gaussian-moat-experiment

./: .git-commit  .gitignore  AGENTS.md  AUDIT-2026-03-16.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  test_moat.cpp
_archive/lb-probe/: Cargo.toml
deploy/: a100-deploy.sh  (+10 more)
legacy/campaign-sqrt-40/tiles-compositor/: CMakeLists.txt
solver/: Cargo.toml
solver/src/: angular.rs  band.rs  gprf_reader.rs  main.rs  prime_router.rs  progress.rs  sieve.rs  stitcher.rs
tile-probe/: Cargo.toml
tile-probe/crates/fat-stripe/: Cargo.toml
tile-probe/crates/fat-stripe-cuda/: Cargo.toml
tile-probe/crates/ise/: Cargo.toml
tile-probe/crates/lb-probe/: Cargo.toml
tile-probe/crates/moat-kernel/: Cargo.toml
tile-probe/src/: compose.rs  main.rs  primes.rs  probe.rs  profile.rs  tile.rs
tiles-compositor/: CMakeLists.txt
tiles-compositor/include/: compositor.h
tiles-compositor/src/: campaign.cpp  compositor.cpp
tiles-compositor/test/: test_compositor.cpp
tiles-maxxing/campaign-sqrt-36/tile-cpp/: CMakeLists.txt  test_compact_uf  test_sieve_asan
tiles-maxxing/cpp-campaign-v2/: CMakeLists.txt  README.md
tiles-maxxing/cpp-campaign-v2/apps/: campaign_main.cpp  compare_snapshots.cpp
tiles-maxxing/cpp-campaign-v2/docs/: 2026-04-21-audit-must-fix.md  2026-04-21-grid-optimization.md  2026-04-21-lemma4-debug.md  final-math-audit.md  tileop-design.md
tiles-maxxing/cpp-campaign-v2/goldens/: 5tile-k36.README.md  5tile-k36.manifest.json  5tile-k36.reference.py  5tile-k40-spec.json  5tile-k40.manifest.json  5tile-spec.json  preflight-oracle.py  test_preflight_oracle_geo.py
tiles-maxxing/cpp-campaign-v2/scripts/: bz_check.py  bz_config.json  collect_stats.py  generate_region.py  preflight.py  run_full_octant.sh
tiles-maxxing/cpp-campaign-v2/src/: campaign_constants.cpp  compositor.cpp  geo_tests.cpp  grid.cpp  primality.cpp  process_tile.cpp  region.cpp  sha256.cpp  sha256.h  sieve.cpp  snapshot.cpp  streaming_compositor.cpp  tileop.cpp  tileop_internal.h  union_find.cpp
tiles-maxxing/cpp-campaign-v2/tests/: CMakeLists.txt  test_axis_zero_offset.cpp  test_campaign_constants.cpp  test_campaign_main.cpp  test_compositor.cpp  test_geo_tests.cpp  test_golden_5tile.cpp  test_grid.cpp  test_primality.cpp  test_region.cpp  test_sieve.cpp  test_snapshot.cpp  test_streaming_compositor.cpp  test_tileop.cpp  test_union_find.cpp
tiles-maxxing/cuda-campaign-v2-sqrt-36/: CMakeLists.txt
tiles-maxxing/cuda-campaign-v2-sqrt-36/apps/: campaign_main_cuda.cpp  cuda_golden_dump.cpp  cuda_vs_cpu_diff.cpp
tiles-maxxing/cuda-campaign-v2-sqrt-36/build-syntax/: CMakeCache.txt
tiles-maxxing/cuda-campaign-v2-sqrt-36/golden/: k36-edge-tsuchimura-r80015790.json  k36-large-r85m.json  k36-medium-r50m.json  k36-small-r10m.json  k40-r100m.json  manifest.json  validate_golden.sh
tiles-maxxing/cuda-campaign-v2-sqrt-36/planning/: 2026-04-21-codex-performance.md  2026-04-21-host-pipeline-scaffold.md  2026-04-21-opus-correctness.md  2026-04-21-opus-reuse.md  2026-04-21-synthesis-canonical-plan.md  2026-04-21-wave-execution-plan.md  2026-05-02-vast-4090-verification.md  k5-test-fix-prompt.md  lemma4-fix-prompt.md  m1-prompt.md  wave-restructure-prompt.md  wave1a-prompt.md  wave1b-prompt.md  wave1c-prompt.md  wave1d-prompt.md  wave2a-prompt.md  wave2b-prompt.md  wave3a-prompt.md  wave3b-prompt.md  wave3c-prompt.md  wave4a-fix-geo-bits-prompt.md  wave4a-prompt.md  wave5a-prompt.md  wave5b-prompt.md  wave5c-prompt.md  wave6a-prompt.md  wave7a-prompt.md  wave7b-prompt.md  wave8a-prompt.md  wave8b-prompt.md  wave8c-prompt.md  wave9a-prompt.md
tiles-maxxing/cuda-campaign-v2-sqrt-36/profiling/: 2026-04-23-full-pipeline-audit.md  2026-04-23-kernel-profile.md  2026-04-23-slab-size-experiment.md
tiles-maxxing/cuda-campaign-v2-sqrt-36/scripts/: run_k34_regression_gate.sh  run_snapshot_sha_gate.sh  run_tsuchimura_gate.sh  run_tsuchimura_k34_gate.sh  summarize_profiles.py  validate_campaign_run.py
tiles-maxxing/cuda-campaign-v2-sqrt-36/src/: host_driver.cpp  kernel_face_encode_v2.cu  kernel_face_sort_pack.cu  kernel_mr.cu  kernel_sieve.cu  kernel_uf_v2.cu  stub_passthrough.cu
tiles-maxxing/cuda-campaign-v2-sqrt-36/tests/: test_dense_remap_adversarial.cpp  test_dispatch_multi_slab_no_stats.cpp  test_face_groups_parity.cpp  test_full_tileop_parity.cpp  test_geo_i128_sweep.cpp  test_k3k4_parent_parity.cpp  test_port_sort_collision.cpp  test_snapshot_sha_R80M.cpp  test_stub_roundtrip.cpp
tiles-maxxing/cuda-campaign-v2-sqrt-40/: CMakeLists.txt
tiles-maxxing/cuda-campaign-v2-sqrt-40/apps/: campaign_main_cuda.cpp  cuda_vs_cpu_diff.cpp
tiles-maxxing/cuda-campaign-v2-sqrt-40/src/: constants_upload.cu  host_driver.cpp  kernel_compact.cu  kernel_face_sort_pack.cu  kernel_geo_flags.cu  kernel_mr.cu  kernel_uf_v2.cu
tiles-maxxing/cuda-campaign-v2-sqrt-40/tests/: test_full_tileop_parity.cpp  test_k1_overflow_spanning.cpp  (+1 more)
verification/: CMakeLists.txt  README.md
verification/cmake/: no_campaign_includes.cmake
verification/compositor-replay/: README.md
verification/include/: independent_moat.hpp
verification/manifests/: k34-centered-moat-c30000000-w16384.json  k34-centered-moat-c40000000-w8192.json  k34-centered-moat-c50000000-w4096.json  k34-centered-moat-c80000000-w2048.json  k36-lower-moat-73359375-w32768.json  k36-lower-span-73339843-w32768.json
verification/postflight/: README.md  moat_hardening_matrix.py  postflight_orchestrate.py  test_postflight_check_contract.py
verification/schemas/: bz-record.schema.json  claim-row.schema.json  postflight-bundle.schema.json  postflight-report.schema.json  sample-manifest.schema.json  span-cert.schema.json  stats-profile-v2.schema.json  tile-sample.schema.json
verification/src/: boundary_semantics_test.cpp  bz_exact_check.cpp  exact_global_uf.cpp  span_cert_check.cpp  tile_sample_check.cpp
verification/stats/: analytical_profile.fixture.json  anatomy_report.py  normalize_sweep_rows.py  summarize_moat_matrix.py  summarize_stats.py  test_normalize_sweep_rows.py  test_stats_profile_schema_fixtures.py  test_summarize_moat_matrix.py
(+671 files in other folders)
