[package]
name = "tile-probe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solver = { path = "../solver", package = "gaussian-moat-solver" }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
fxhash = "0.2"
smallvec = "1.13"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
