[workspace]
members = ["crates/moat-kernel", "crates/ise", "crates/lb-probe"]
resolver = "2"

[workspace.dependencies]
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
fxhash = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.13"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
