[package]
name = "fat-stripe-cuda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fat-stripe-cuda"
path = "src/main.rs"

[dependencies]
moat-kernel = { path = "../moat-kernel" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
