[package]
name = "moat-kernel"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[dependencies]
rayon = { workspace = true }
fxhash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
libc = { workspace = true }
